added grid layout correction codes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- navbar end -->
     </header>
     <!-- start mobile section -->
-        <section class="bg-[#12174e] pt-20 mb-28">
+        <section class="bg-[#12174e] pt-20 mb-28 md:mb-36 lg:mb-52 ">
           <div class="container px-8 lg:px-24 mx-auto my-auto">
             <div>
             <div class="flex flex-col justify-center items-center text-center">
@@ -103,17 +103,17 @@
 
         <!-- last section -->
          <section>
-          <div class="container mx-auto my-auto mb-5">
+          <div class="container mx-auto my-auto mb-10">
             <!-- title part -->
             <div class="flex flex-col justify-center items-center text-center mb-16">
               <h1 class="text-4xl md:text-5xl font-bold text-[#4e4e4e] mb-5">What you can do</h1>
               <p class="text-lg md:text-xl text-[#626262] w-2/3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto dolorem, delectus necessitatibus ut quod tenetur at facilis recusandae perspiciatis sunt, quam quas autem modi explicabo non voluptas minus id corrupti!</p>
             </div>
             <!-- card part -->
-             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 space-x-6 space-y-6 lg:space-y-0">
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4  lg:space-y-0 place-items-center">
               <!-- card 1 -->
                <div class="text-[#5e5252] flex flex-col justify-center items-center text-center py-8 shadow shadow-[#e0dfdf]">
-                <div class="bg-green-500 w-12 h-12 rounded-full flex justify-center items-center mb-4"><img src="./assets/play-store.png" alt=""></div>
+                <div class="bg-green-500 w-12 h-12 rounded-full flex justify-center items-center mx-auto mb-4"><img src="./assets/play-store.png" alt=""></div>
                 <h4 class="text-2xl font-bold mb-4">Easy To use</h4>
                 <p class="text-xl mb-4">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. Nisi, ad?</p>
                 <a href="">Read More</a>
@@ -142,5 +142,6 @@
              </div>
           </div>
          </section>
+
   </body>
 </html>
