--- a/index.html
+++ b/index.html
@@ -72,9 +72,15 @@
             <button class="text-lg font-semibold">Login</button>
             <button class="text-lg font-semibold bg-orange-600 px-6 py-3 rounded-lg hover:bg-orange-500 duration-300">Get Started</button>
           </div>
-          <div class="lg:hidden">
-            <img class="w-7 h-7" src="./assets/more.png" alt="">
-          </div>
+          
+          <div class="dropdown dropdown-end lg:hidden">
+  <div tabindex="0" role="button" class=""><img class="w-7 h-7" src="./assets/more.png" alt=""></div>
+  <ul tabindex="0" class="dropdown-content menu bg-slate-500 rounded-box z-[1] w-24 p-1 shadow">
+    <li><a class="hover:bg-slate-400">Home</a></li>
+    <li><a class="hover:bg-slate-400">Services</a></li>
+    <li><a class="hover:bg-slate-400">About</a></li>
+  </ul>
+</div>
         </div>
       </nav>
       <!-- navbar end -->
