--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <p class="text-lg md:text-xl text-[#626262] w-2/3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto dolorem, delectus necessitatibus ut quod tenetur at facilis recusandae perspiciatis sunt, quam quas autem modi explicabo non voluptas minus id corrupti!</p>
             </div>
             <!-- card part -->
-             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4  lg:space-y-0 place-items-center">
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4  lg:space-y-0 m-2">
               <!-- card 1 -->
                <div class="text-[#5e5252] flex flex-col justify-center items-center text-center py-8 shadow shadow-[#e0dfdf]">
                 <div class="bg-green-500 w-12 h-12 rounded-full flex justify-center items-center mx-auto mb-4"><img src="./assets/play-store.png" alt=""></div>
